--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,4 +1,4 @@
-lt application files
+# Built application files
 *.apk
 *.ap_
 
@@ -14,7 +14,12 @@ gen/
 
 # Gradle files
 .gradle/
+gradle/
+gradlew
+gradlew.bat
 build/
+*.iml
+*.idea/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -25,8 +30,11 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
+# Ignore Eclipse related files
+.classpath
+.project
+.settings/
+.DS_Store
 
-# Android Studio captures folder
-captures/
+# Ignore gradle compile generate dir
+releaseVersion/
