--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="yjy.com.accounts">
+<manifest package="yjy.com.accounts"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".application.ACApplication"
@@ -14,11 +14,14 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".function.list.AccountChartListActivity"/>
+        <activity android:name=".function.list.AccountDetailListActivity"/>
     </application>
 
 </manifest>
