--- a/local.properties
+++ b/local.properties
@@ -7,4 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=/Users/yujinyang/Library/Android/sdk
+#Tue Mar 29 10:30:12 CST 2016
+sdk.dir=/Users/mayongsheng/Library/Android/sdk
